--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,6 +1,5 @@
 # Output pattern : date [thread] priority category - message
 log4j.rootLogger=WARN, stdout, logfile
-
 log.defaultclassify=app
 log4j.rootLogger=INFO,stdout
 
@@ -22,7 +21,8 @@ log4j.logger.com.fanfan=info
 
 #3rd party library level
 log4j.logger.org.hibernate.cache=ERROR
-
+##log4j.logger.org.hibernate.SQL=trace   
+##log4j.logger.org.hibernate.type=trace
 log4j.logger.org.springframework=ERROR
 log4j.logger.org.jasig.cas.web.flow.AuthenticationViaFormAction=info
 log4j.logger.org.org.springframework.beans.factory.annotation.Autowired=info
