--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
 log4j.appender.logfile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.logfile.File=D:/Log Files/logs.log
+log4j.appender.logfile.File=${webApp.root}/log/logs.log
 log4j.appender.logfile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
@@ -27,3 +27,10 @@ log4j.logger.org.springframework=ERROR
 log4j.logger.org.jasig.cas.web.flow.AuthenticationViaFormAction=info
 log4j.logger.org.org.springframework.beans.factory.annotation.Autowired=info
 
+
+##custom log config
+log4j.logger.errorLog=ERROR,errorLog
+log4j.appender.errorLog=org.apache.log4j.FileAppender
+log4j.appender.errorLog.File=${webApp.root}/log/errorLog.log
+log4j.appender.errorLog.layout=org.apache.log4j.PatternLayout
+log4j.appender.errorLog.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p [%t] %c.%M(%L) - %m%n
